# swagger_server/controllers/crypto_metrics_app_controller.py
@@ -1,9 +1,11 @@
 import uuid
+import time
 
 import connexion
 import six
 
 from custom_logger import custom_logger
+from swagger_server.metrics_store.price_store import PriceStore
 from swagger_server.models.api_response import ApiResponse  # noqa: E501
 from swagger_server.models.metric import Metric  # noqa: E501
 from swagger_server.models.monitor import Monitor  # noqa: E501
@@ -26,7 +28,7 @@ def add_metric(body):  # noqa: E501
     """
     if connexion.request.is_json:
         metric = Metric.from_dict(connexion.request.get_json())  # noqa: E501
-        metric.id = str(uuid.uuid4())
+        metric.metric_id = str(uuid.uuid4())
         metric.save()
         return metric
     return ApiResponse(code=400, message="invalid request")
@@ -45,17 +47,14 @@ def delete_metric(metric_id):  # noqa: E501
     return "do some magic!"
 
 
-def delete_metric_monitor(metric_id, monitor_id):  # noqa: E501
+def delete_metric_monitor(monitor_id):  # noqa: E501
     """deelte a monitor for the metric
 
      # noqa: E501
-
-    :param metric_id: metric id to monitor
-    :type metric_id: str
     :param monitor_id: metric id to monitor
     :type monitor_id: str
 
-    :rtype: List[Monitor]
+    :rtype: Monitor
     """
     return "do some magic!"
 
@@ -113,21 +112,39 @@ def query_metrics(metric_id, body=None):  # noqa: E501
     :rtype: List[Source]
     """
     if connexion.request.is_json:
-        body = Query.from_dict(connexion.request.get_json())  # noqa: E501
-    return "do some magic!"
+        query = Query.from_dict(connexion.request.get_json())  # noqa: E501
+        metric = Metric.load(metric_id)
+        if not metric:
+            return ApiResponse(code=404, message="metric not found")
+        if query.start_time < query.end_time:
+            start_time = time.strftime(
+                "%Y-%m-%dT%H:%M:%SZ", time.gmtime(query.start_time)
+            )
+            end_time = time.strftime("%Y-%m-%dT%H:%M:%SZ", time.gmtime(query.end_time))
+            result = PriceStore().query_price(
+                metric, start_time, end_time, query.resolution
+            )
+            return result
+    return ApiResponse(code=400, message="invalid request")
 
 
-def rank_metrics(metric_type=None):  # noqa: E501
+def rank_metrics():  # noqa: E501
     """List all sources to scrape metrics
 
      # noqa: E501
 
-    :param metric_type:
-    :type metric_type: str
 
     :rtype: List[Source]
     """
-    return "do some magic!"
+    metrics = Metric.list()
+    price_store = PriceStore()
+    final_result = []
+    for metric in metrics:
+        result = price_store.query_stddev(metric)
+        final_result.append((metric.metric_name(), result))
+
+    final_result = sorted(final_result, key=lambda x: x[1], reverse=True)
+    return final_result
 
 
 def set_metric_monitor(body=None):  # noqa: E501
@@ -146,7 +163,7 @@ def set_metric_monitor(body=None):  # noqa: E501
         metric = Metric.load(monitor.metric_id)
         if not metric:
             return ApiResponse(code=404, message="metric not found")
-        monitor.id = str(uuid.uuid4())
+        monitor.monitor_id = str(uuid.uuid4())
         monitor.save()
         return monitor
     return ApiResponse(code=400, message="invalid request")
